# shipnote

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/shipnote/: __init__.py  cli.py  core.py
tests/: test_core.py
