[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipnote"
version = "0.1.0"
description = "Generate clean, grouped release notes from your git history. Zero dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Seven Of Nine" }]
keywords = [
    "changelog",
    "release-notes",
    "git",
    "conventional-commits",
    "release",
    "maintainer",
    "cli",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Sev7nOfNine/shipnote"
Repository = "https://github.com/Sev7nOfNine/shipnote"
Issues = "https://github.com/Sev7nOfNine/shipnote/issues"

[project.scripts]
shipnote = "shipnote.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shipnote"]

[tool.hatch.build.targets.sdist]
include = ["src/shipnote", "README.md", "LICENSE", "CHANGELOG.md", "tests"]
